--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
-  <body>
+
+<!-- Header info -->
     <header>
       <div id="logo">
       <img src="resources/images/ic-logo.svg" alt="logo"/>
@@ -18,7 +19,23 @@
       <span><a href="#">For companies</a></span>
       <span><a href="#">Sign in</a></span>
     </nav>
+  </header>
 
-</header>
+
+  <body>
+    <div class="container">
+
+  <!-- Banner-->
+      <div class="banner">
+          <img src="resources/images/banner.jpg" alt="students studying">
+
+        <div class="something">
+          <h1>Learn something new everyday</h1>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+          <button type="button">Start Here</button>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
