--- a/index.html
+++ b/index.html
@@ -24,134 +24,183 @@
 
 
   <body>
-    <div class="container">
+      <div class="container">
 
-  <!-- Banner-->
-      <div class="banner">
-        <div class="left">
-          <img src="resources/images/banner.jpg" alt="students studying">
-        </div>
-
-        <div class="right">
-          <h1>Learn something new everyday</h1>
-          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-          <button>Start Here</button>
-        </div>
-      </div>
-
-      <div class="banner info">
-          <div class="left">
-          <img src="resources/images/information-main.jpg" alt="man reading book">
-          <h1>It doesn't hurt to keep practicing</h1>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
-            lectus, nec consequat neque. Sed non accumsan urna. Phaseullus sed consequat ex.
-            Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-
-            <p> Emanuel, Sr Strategist at Hiring.com</p>
-        </div>
-
-       <div class="right">
-         <div class="information">
-            <img src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
-            <div class="details">
-              <h3>Orientation date</h3>
-              <span>Tue 10/11 &amp; Wed 10/12: 8am-3pm</span>
-              <span><a href="#">Read more</a></span>
+        <!-- Banner-->
+            <div class="banner">
+              <div class="left">
+                <img src="resources/images/banner.jpg" alt="students studying">
               </div>
-          </div>
 
-          <div class="information">
-             <img src="resources/images/information-campus.jpg" alt="campus">
-             <div class="details">
-               <h3>Our campus</h3>
-               <span>Find which campus is close by you</span>
-               <span><a href="#">Read more</a></span>
+              <div class="right">
+                <h1>Learn something new everyday</h1>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+                <button>Start Here</button>
+              </div>
+            </div>
+
+            <div class="banner info">
+                <div class="left">
+                <img src="resources/images/information-main.jpg" alt="man reading book">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+                  lectus, nec consequat neque. Sed non accumsan urna. Phaseullus sed consequat ex.
+                  Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+
+                  <p> Emanuel, Sr Strategist at Hiring.com</p>
+              </div>
+
+             <div class="right">
+               <div class="information">
+                  <img src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
+                  <div class="details">
+                    <h3>Orientation date</h3>
+                    <span>Tue 10/11 &amp; Wed 10/12: 8am-3pm</span>
+                    <span><a href="#">Read more</a></span>
+                    </div>
+                </div>
+
+                <div class="information">
+                   <img src="resources/images/information-campus.jpg" alt="campus">
+                   <div class="details">
+                     <h3>Our campus</h3>
+                     <span>Find which campus is close by you</span>
+                     <span><a href="#">Read more</a></span>
+                   </div>
+                </div>
+
+               <div class="information">
+                  <img src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+                  <div class="details">
+                    <h3>Our guest lecture</h3>
+                    <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+                    <span><a href="#">Read more</a></span>
+               </div>
+              </div>
+
              </div>
-          </div>
+            </div>
 
-         <div class="information">
-            <img src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
-            <div class="details">
-              <h3>Our guest lecture</h3>
-              <span>Join a keynote with Oliver Sack about music in medical treatment</span>
-              <span><a href="#">Read more</a></span>
+      <!-- Course offerings -->
+
+            <div class="content learning">
+              <h1>Start learning</h1>
+
+              <div class="courses">
+
+                <div class="majors">
+                    <img src="resources/images/course-software.jpg" alt="desktop computers">
+
+                    <div class="deets">
+                    <h3>Software engineering</h3>
+                    <p>COURSES</p>
+                    <span>Web development, Mobile Development, iOT, APIs</span>
+                  </div>
+
+                </div>
+
+                <div class="majors">
+                  <img src="resources/images/course-computer-art.jpg" alt="iphone">
+                  <div class="deets">
+                    <h3>Computer Art</h3>
+                    <p>COURSES</p>
+                    <span>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</span>
+                  </div>
+                </div>
+
+                <div class="majors">
+                    <img src="resources/images/course-design.jpg" alt="film slr camera">
+
+                    <div class="deets">
+                    <h3>Design</h3>
+                    <p>COURSES</p>
+                    <span>User Experience Design, User Research, Visual Design</span>
+                  </div>
+
+                </div>
+
+                <div class="majors">
+                  <img src="resources/images/course-data.jpg" alt="laptop with graphs">
+                  <div class="deets">
+                    <h3>Data</h3>
+                    <p>COURSES</p>
+                    <span>Data Science, Big Data, SQL, Data Visualization</span>
+                  </div>
+                </div>
+
+                <div class="majors">
+                    <img src="resources/images/course-business.jpg" alt="a game of chess">
+
+                    <div class="deets">
+                    <h3>Business</h3>
+                    <p>COURSES</p>
+                    <span>Product Development, Business Development, Startup</span>
+                  </div>
+
+                </div>
+
+                <div class="majors">
+                  <img src="resources/images/course-marketing.jpg" alt="apple watch">
+                  <div class="deets">
+                    <h3>Marketing</h3>
+                    <p>COURSES</p>
+                    <span>Analytics, Content Marketing, Mobile Marketing</span>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+      <!-- Thesis Exhibit -->
+
+      <div class="content thesis">
+       <h1>Thesis exhibit</h1>
+
+       <div class="banner">
+         <div class="left">
+           <video src="resources/videos/thesis.mp4" alt="thesis video"></video>
+             <h3>Reimagine urban</h3>
+
+             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+               lectus, nec consequat neque. Sed non accumsan urna. Phaseullus sed consequat ex.
+               Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
          </div>
-        </div>
+
+         <div class="right">
+           <div class="information">
+             <img src="resources/images/thesis-fisma.jpg" alt="sketching and iphone">
+             <div class="details">
+               <h3>Fisma: Design and Prototype</h3>
+               <span>Designer showcase of new prototype product</span>
+             </div>
+           </div>
+
+           <div class="information">
+             <img src="resources/images/thesis-now-and-then.jpg" alt="empire state building"/>
+             <div class="details">
+               <h3>Now and then</h3>
+               <span>Research study about New York</span>
+             </div>
+           </div>
+         </div>
 
        </div>
       </div>
-
-      <div class="learning">
-        <h1>Start learning</h1>
-
-        <div class="courses">
-
-          <div class="majors">
-              <img src="resources/images/course-software.jpg" alt="desktop computers">
-
-              <div class="deets">
-              <h3>Software engineering</h3>
-              <p>COURSES</p>
-              <span>Web development, Mobile Development, iOT, APIs</span>
-            </div>
-
-          </div>
-
-          <div class="majors">
-            <img src="resources/images/course-computer-art.jpg" alt="iphone">
-            <div class="deets">
-              <h3>Computer Art</h3>
-              <p>COURSES</p>
-              <span>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</span>
-            </div>
-          </div>
-
-          <div class="majors">
-              <img src="resources/images/course-design.jpg" alt="film slr camera">
-
-              <div class="deets">
-              <h3>Design</h3>
-              <p>COURSES</p>
-              <span>User Experience Design, User Research, Visual Design</span>
-            </div>
-
-          </div>
-
-          <div class="majors">
-            <img src="resources/images/course-data.jpg" alt="laptop with graphs">
-            <div class="deets">
-              <h3>Data</h3>
-              <p>COURSES</p>
-              <span>Data Science, Big Data, SQL, Data Visualization</span>
-            </div>
-          </div>
-
-          <div class="majors">
-              <img src="resources/images/course-business.jpg" alt="a game of chess">
-
-              <div class="deets">
-              <h3>Business</h3>
-              <p>COURSES</p>
-              <span>Product Development, Business Development, Startup</span>
-            </div>
-
-          </div>
-
-          <div class="majors">
-            <img src="resources/images/course-marketing.jpg" alt="apple watch">
-            <div class="deets">
-              <h3>Marketing</h3>
-              <p>COURSES</p>
-              <span>Analytics, Content Marketing, Mobile Marketing</span>
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-
-
     </div>
 
   </body>
+
+  <!-- footer -->
+
+  <footer>
+<div class="span-left">
+    <span>©2016 Colmar Academy. All Rights reserved<span>
+</div>
+        <nav>
+          <span><a href="#">Terms</a></span>
+          <span><a href="#">Privacy</a></span>
+        </nav>
+
+  </footer>
+
 </html>
