--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
       <span class="colmar">COLMAR</span>
       <span class="academy">ACADEMY</span>
     </div>
-    <nav>
+    <nav class="desktop">
       <span><a href="#">On Campus</a></span>
       <span><a href="#">Online</a></span>
       <span><a href="#">For companies</a></span>
       <span><a href="#">Sign in</a></span>
     </nav>
+
+<!--mobile nav -->
+    <nav class="mobile">
+      <span><img src="resources/images/ic-logo.svg" alt="logo"></span>
+      <span><a href="#"><img src="resources/images/ic-on-campus.svg" alt="On Campus"></a></span>
+      <span><a href="#"><img src="resources/images/ic-online.svg" alt="Online"></a></span>
+      <span><a href="#"><img src="resources/images/ic-login.svg" alt="Sign In"></a></span>
+
+    </nav>
+
   </header>
 
 
@@ -27,7 +37,7 @@
       <div class="container">
 
         <!-- Banner-->
-            <div class="banner">
+            <div class="banner learn">
               <div class="left">
                 <img src="resources/images/banner.jpg" alt="students studying">
               </div>
@@ -92,7 +102,7 @@
                     <img src="resources/images/course-software.jpg" alt="desktop computers">
 
                     <div class="deets">
-                    <h3>Software engineering</h3>
+                    <h3><a href="#">Software engineering</a></h3>
                     <p>COURSES</p>
                     <span>Web development, Mobile Development, iOT, APIs</span>
                   </div>
@@ -102,7 +112,7 @@
                 <div class="majors">
                   <img src="resources/images/course-computer-art.jpg" alt="iphone">
                   <div class="deets">
-                    <h3>Computer Art</h3>
+                    <h3><a href="#">Computer Art</a></h3>
                     <p>COURSES</p>
                     <span>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</span>
                   </div>
@@ -112,7 +122,7 @@
                     <img src="resources/images/course-design.jpg" alt="film slr camera">
 
                     <div class="deets">
-                    <h3>Design</h3>
+                    <h3><a href="#">Design</a></h3>
                     <p>COURSES</p>
                     <span>User Experience Design, User Research, Visual Design</span>
                   </div>
@@ -122,7 +132,7 @@
                 <div class="majors">
                   <img src="resources/images/course-data.jpg" alt="laptop with graphs">
                   <div class="deets">
-                    <h3>Data</h3>
+                    <h3><a href="#">Data</a></h3>
                     <p>COURSES</p>
                     <span>Data Science, Big Data, SQL, Data Visualization</span>
                   </div>
@@ -132,7 +142,7 @@
                     <img src="resources/images/course-business.jpg" alt="a game of chess">
 
                     <div class="deets">
-                    <h3>Business</h3>
+                    <h3><a href="#">Business</a></h3>
                     <p>COURSES</p>
                     <span>Product Development, Business Development, Startup</span>
                   </div>
@@ -142,7 +152,7 @@
                 <div class="majors">
                   <img src="resources/images/course-marketing.jpg" alt="apple watch">
                   <div class="deets">
-                    <h3>Marketing</h3>
+                    <h3><a href="#">Marketing</a></h3>
                     <p>COURSES</p>
                     <span>Analytics, Content Marketing, Mobile Marketing</span>
                   </div>
@@ -170,15 +180,15 @@
            <div class="information">
              <img src="resources/images/thesis-fisma.jpg" alt="sketching and iphone">
              <div class="details">
-               <h3>Fisma: Design and Prototype</h3>
-               <span>Designer showcase of new prototype product</span>
+               <h3><a href="#">Fisma: Design and Prototype</a></h3>
+               <span><a href="#">Designer showcase of new prototype product</a></span>
              </div>
            </div>
 
            <div class="information">
              <img src="resources/images/thesis-now-and-then.jpg" alt="empire state building"/>
              <div class="details">
-               <h3>Now and then</h3>
+               <h3><a href="#">Now and then</a></h3>
                <span>Research study about New York</span>
              </div>
            </div>
