--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" rel="stylesheet">
 
@@ -62,28 +63,31 @@
 
              <div class="right">
                <div class="information">
-                  <img src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
+                 <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt="pedestrian shadows">
+                  <img class="desktop tablet" src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
                   <div class="details">
                     <h3>Orientation date</h3>
-                    <span>Tue 10/11 &amp; Wed 10/12: 8am-3pm</span>
+                    <span class="tablet">Tue 10/11 &amp; Wed 10/12: 8am-3pm</span>
                     <span><a href="#">Read more</a></span>
                     </div>
                 </div>
 
                 <div class="information">
-                   <img src="resources/images/information-campus.jpg" alt="campus">
+                  <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt="campus">
+                   <img class="desktop tablet" src="resources/images/information-campus.jpg" alt="campus">
                    <div class="details">
                      <h3>Our campus</h3>
-                     <span>Find which campus is close by you</span>
+                     <span class="tablet">Find which campus is close by you</span>
                      <span><a href="#">Read more</a></span>
                    </div>
                 </div>
 
                <div class="information">
-                  <img src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+                 <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sack">
+                  <img class="desktop tablet" src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
                   <div class="details">
                     <h3>Our guest lecture</h3>
-                    <span>Join a keynote with Oliver Sack about music in medical treatment</span>
+                    <span class="tablet">Join a keynote with Oliver Sack about music in medical treatment</span>
                     <span><a href="#">Read more</a></span>
                </div>
               </div>
@@ -106,6 +110,7 @@
                     <p>COURSES</p>
                     <span>Web development, Mobile Development, iOT, APIs</span>
                   </div>
+
 
                 </div>
 
@@ -159,6 +164,8 @@
                 </div>
 
               </div>
+
+
             </div>
 
       <!-- Thesis Exhibit -->
