--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
              <div class="right">
                <div class="information">
                  <img class="mobile" src="resources/images/information-orientation-mobile.jpg" alt="pedestrian shadows">
-                  <img class="desktop tablet" src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
+                  <img class="desktop" src="resources/images/information-orientation.jpg" alt="pedestrian shadows">
                   <div class="details">
                     <h3>Orientation date</h3>
                     <span class="tablet">Tue 10/11 &amp; Wed 10/12: 8am-3pm</span>
@@ -74,7 +74,7 @@
 
                 <div class="information">
                   <img class="mobile" src="resources/images/information-campus-mobile.jpg" alt="campus">
-                   <img class="desktop tablet" src="resources/images/information-campus.jpg" alt="campus">
+                   <img class="desktop" src="resources/images/information-campus.jpg" alt="campus">
                    <div class="details">
                      <h3>Our campus</h3>
                      <span class="tablet">Find which campus is close by you</span>
@@ -84,7 +84,7 @@
 
                <div class="information">
                  <img class="mobile" src="resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sack">
-                  <img class="desktop tablet" src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+                  <img class="desktop" src="resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
                   <div class="details">
                     <h3>Our guest lecture</h3>
                     <span class="tablet">Join a keynote with Oliver Sack about music in medical treatment</span>
