--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
        <div class="banner">
          <div class="left">
-           <video src="resources/videos/thesis.mp4" alt="thesis video"></video>
+           <video controls> <source src="resources/videos/thesis.mp4" alt="thesis video"></video>
              <h3>Reimagine urban</h3>
 
              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
